--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+  <link href="./main.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <link href="./main.css" type="text/css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Diplomata' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -78,11 +77,11 @@
       <p>Our goal is to create an architecture that can do real-time object detection at a speed of 10 FPS and a mean average precision of about 30% on a computer with out a GPU.
      </p>
       <b>What is our contribution?</b>
-      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 31.8% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can read more about our project <a href="">here </a>, and find our code <a href="">here</a>. We have a live demo of our architecture trained on <a href="src/model_voc.html"> VOC </a> and <a href="src/model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
+      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 31.8% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can read more about our project <a href="">here </a>, and find our code <a href="">here</a>. We have a live demo of our architecture trained on <a href="model_voc.html"> VOC </a> and <a href="model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
     <i>This project was created through the <a href="https://uncw.edu/math/REU/index.html"> Data Mining REU at University of North Carolina Wilmington</a>. NSF grant DMS-1659288 </i>
     </div>
     <div class="col-sm-6">
-      <img src="./img/us1.png" id="us">
+      <img src="img/us1.png" id="us">
 
     </div>
   </div>
