--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       <p>Our goal is to create an architecture that can do real-time object detection at a speed of 10 FPS and a mean average precision of about 30% on a computer with out a GPU.
      </p>
       <b>What is our contribution?</b>
-      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 31.8% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can read more about our project <a href="">here </a>, and find our code <a href="">here</a>. We have a live demo of our architecture trained on <a href="model_voc.html"> VOC </a> and <a href="model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
+      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 33.57% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can read more about our project <a href="">here </a>, and find our code <a href="">here</a>. We have a live demo of our architecture trained on <a href="model_voc.html"> VOC </a> and <a href="model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
     <i>This project was created through the <a href="https://uncw.edu/math/REU/index.html"> Data Mining REU at University of North Carolina Wilmington</a>. NSF grant DMS-1659288 </i>
     </div>
     <div class="col-sm-6">
@@ -98,25 +98,25 @@
   <h7>From our trained coco network</h7><br>
   <div class="row text-center ">
     <div class="col-sm-4">
-        <img src="./img/airplane.png" width="500" height="375">
+        <img src="./img/aeroplane.jpg" width="500" height="375">
     </div>
     <div class="col-sm-4">
-        <img src="./img/bear.png"  width="500" height="375">
+        <img src="./img/neko_chan.jpg"  width="500" height="375">
     </div>
     <div class="col-sm-4">
-        <img src="./img/bike.png" width="500" height="375">
+        <img src="./img/bike.jpg" width="500" height="375">
     </div>
     <div style="margin-top:30px" class="col-sm-4">
-        <img src="./img/giraffe.png" width="500" height="375">
+        <img src="./img/teddy.jpg" width="500" height="375">
     </div>
     <div style="margin-top:30px" class="col-sm-4">
-        <img src="./img/laptop.png" width="500" height="375">
+        <img src="./img/oranges.jpg" width="500" height="375">
     </div>
 <!--     <div style="margin-top:10px" class="col-sm-3">
         <img src="./img/plant.png" width="500" height="375">
     </div> -->
      <div style="margin-top:30px" class="col-sm-4">
-        <img src="./img/fruits.png" width="500" height="375">
+        <img src="./img/donuts.jpg" width="500" height="375">
     </div>
    <!--   <div style="margin-top:10px" class="col-sm-3">
         <img src="./img/stop.png" width="500" height="375">
