--- a/src/index.html
+++ b/src/index.html
@@ -112,15 +112,23 @@
     <div style="margin-top:30px" class="col-sm-4">
         <img src="./img/oranges.jpg" width="500" height="375">
     </div>
-<!--     <div style="margin-top:10px" class="col-sm-3">
-        <img src="./img/plant.png" width="500" height="375">
-    </div> -->
      <div style="margin-top:30px" class="col-sm-4">
         <img src="./img/donuts.jpg" width="500" height="375">
     </div>
-   <!--   <div style="margin-top:10px" class="col-sm-3">
-        <img src="./img/stop.png" width="500" height="375">
-    </div> -->
+  </div>
+
+
+  <div class="row text-center ">
+    <div style="margin-top:30px" class = "col-sm-4">
+        <img src="./img/car.gif" width="500" height="375">
+    </div>
+    <div style="margin-top:30px" class = "col-sm-4">
+        <img src="./img/sign.gif" width="500" height="375">
+    </div>
+    <div style="margin-top:30px" class = "col-sm-4">
+        <img src="./img/car2.gif" width="500" height="375">
+    </div>
+
   </div>
 
 
