--- a/src/index.html
+++ b/src/index.html
@@ -80,12 +80,31 @@
       <p>Our goal is to create an architecture that can do real-time object detection at a speed of 10 FPS and a mean average precision of about 30% on a computer with out a GPU.
      </p>
       <b>What is our contribution?</b>
-      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 33.57% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can find our code <a href="https://github.com/reu2018dl/yolo-lite">here</a>. We have a live demo of our architecture trained on <a href="model_voc.html"> VOC </a> and <a href="model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
+      <p>We developed a yolo based architecture that can achieve 21 FPS on a Dell XPS 13' running on darkflow. This is 9x faster than the original tiny yolo v2. Our mean average precision is 33.57% compared to 40.48% when trained on VOC. Our model achieves its speed by shrinking the standard YOLOv2-tiny model and also getting rid of batch normalization. You can read more about our project <a href = "./yolo-lite-real.pdf">here</a> and find our code <a href="https://github.com/reu2018dl/yolo-lite">here</a>. We have a live demo of our architecture trained on <a href="model_voc.html"> VOC </a> and <a href="model_coco.html">COCO </a> datasets. Both of these demos run completly on the users computer. The FPS is lower than what would be achieved running on a local computer. </p>
+
+
     <i>This project was created through the <a href="https://uncw.edu/math/REU/index.html"> Data Mining REU at University of North Carolina Wilmington</a>. NSF grant DMS-1659288 </i>
     </div>
     <div class="col-sm-6">
       <img src="img/us1.png" id="us">
-
+      <p style="margin-bottom: 20px;"> YOLO-LITE detection of us (missed the bottle and cups in our hands).</p>
+      <table>
+      <tr>
+        <th>Dataset</th>
+        <th>mAP</th>
+        <th>FPS</th>
+      </tr>
+      <tr>
+        <td>VOC</td>
+        <td>33.57%</td>
+        <td>21</td>
+      </tr>
+      <tr>
+        <td>COCO</td>
+        <td>---</td>
+        <td>---</td>
+      </tr>
+    </table>
     </div>
   </div>
 </div>
